# depth_clean_ros

./: CMakeLists.txt  README.md  package.xml
src/: clean_depth.cpp  depth_clean.cpp
